<resources>
    <string name="app_name">Home Internet Review</string>

    <string name="review_description">Describe your opinion (optional)</string>
    <string name="review_post_button">Post</string>

    <string name="detailed_review_speed">Speed</string>
    <string name="detailed_review_price">Price</string>
    <string name="detailed_review_reliability">Reliability</string>
    <string name="detailed_review_customer_service">Customer Service</string>

    <string name="action_reviews_title">Reviews</string>
    <string name="action_standings_title">Standings</string>
    <string name="action_profile_title">Profile</string>

    <string name="review_item_profile_picture">Profile Picture</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">Name</string>
    <string name="profile_password">Password</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_delete_account_button">Delete Account</string>
    <string name="profile_sign_in_button">Sign in</string>
    <string name="profile_sign_in_message">Sign in to explain your experience and post reviews
        \n or Create your new account.</string>
    <string name="profile_sign_out_button">Sign out</string>
    <string name="profile_my_reviews">My Reviews</string>
    <string name="profile_delete_review_message">Your review has been deleted</string>
    <string name="profile_delete_review_action">Undo</string>

    <string name="fragment_create_review_title">Create review</string>
    <string name="fragment_review_details_option_title">Select your review details</string>
    <string name="review_details_option_quick_button">Quick</string>
    <string name="review_details_option_detailed_button">Detailed</string>

    <string name="fragment_reviews_title">Reviews</string>
    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_standings_title">Standings</string>

    <string name="fragment_companies_list_title">Pick a company</string>
    <string name="fragment_governorates_list_title">Pick a governorate</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>

    <string name="dialog_edit_profile_name_title">Change Name</string>
    <string name="dialog_edit_profile_name_save_btn">Change</string>
    <string name="dialog_edit_profile_name_discard_btn">Discard</string>

    <string name="dialog_delete_profile_title">Are you sure?</string>
    <string name="dialog_delete_profile_message">Deleting your account will remove profile information
        and posted reviews. This action can not be recovered.</string>
    <string name="dialog_delete_profile_delete_btn">Delete</string>
    <string name="dialog_delete_profile_cancel_btn">Cancel</string>

    <string name="dialog_verify_profile_title">Verify your account</string>
    <string name="dialog_verify_profile_verify_btn">Verify</string>
    <string name="dialog_verify_profile_cancel_btn">Cancel</string>

    <string name="loading_text">Loading…</string>
    <string name="company_picture">Company Picture</string>

    <string name="server_client_id" translatable="false">123625297518-pv5rjmqsj2qbtej843jfrvd5fl9lmike.apps.googleusercontent.com</string>
    <string name="anonymous">Anonymous</string>
    <string name="information">Information</string>
    <string name="no_available_data">No available data.</string>
    <string name="delete">Delete</string>

    <string name="cairo">Cairo</string>
    <string name="giza">Giza</string>
    <string name="alexandria">Alexandria</string>
    <string name="dakahlia">Dakahlia</string>
    <string name="red_sea">Red Sea</string>
    <string name="beheira">Beheira</string>
    <string name="fayoum">Fayoum</string>
    <string name="gharbiya">Gharbiya</string>
    <string name="ismailia">Ismailia</string>
    <string name="monofia">Monofia</string>
    <string name="minya">Minya</string>
    <string name="qaliubiya">Qaliubiya</string>
    <string name="new_valley">New Valley</string>
    <string name="suez">Suez</string>
    <string name="aswan">Aswan</string>
    <string name="assiut">Assiut</string>
    <string name="beni_suef">Beni Suef</string>
    <string name="port_said">Port Said</string>
    <string name="damietta">Damietta</string>
    <string name="sharkia">Sharkia</string>
    <string name="south_sinai">South Sinai</string>
    <string name="kafr_al_sheikh">Kafr Al Sheikh</string>
    <string name="matrouh">Matrouh</string>
    <string name="luxor">Luxor</string>
    <string name="qena">Qena</string>
    <string name="north_sinai">North Sinai</string>
    <string name="sohag">Sohag</string>

    <string-array name="governorates">
        <item>@string/cairo</item>
        <item>@string/giza</item>
        <item>@string/alexandria</item>
        <item>@string/dakahlia</item>
        <item>@string/red_sea</item>
        <item>@string/beheira</item>
        <item>@string/fayoum</item>
        <item>@string/gharbiya</item>
        <item>@string/ismailia</item>
        <item>@string/monofia</item>
        <item>@string/minya</item>
        <item>@string/qaliubiya</item>
        <item>@string/new_valley</item>
        <item>@string/suez</item>
        <item>@string/aswan</item>
        <item>@string/assiut</item>
        <item>@string/beni_suef</item>
        <item>@string/port_said</item>
        <item>@string/damietta</item>
        <item>@string/sharkia</item>
        <item>@string/south_sinai</item>
        <item>@string/kafr_al_sheikh</item>
        <item>@string/matrouh</item>
        <item>@string/luxor</item>
        <item>@string/qena</item>
        <item>@string/north_sinai</item>
        <item>@string/sohag</item>
    </string-array>
</resources>
