<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reviewsFragment"
        android:contentDescription="@string/action_reviews_title"
        android:icon="@drawable/ic_reviews_24dp"
        android:title="@string/action_reviews_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/standingsFragment"
        android:contentDescription="@string/action_standings_title"
        android:icon="@drawable/ic_standings_24dp"
        android:title="@string/action_standings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/action_profile_title"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/action_profile_title"
        app:showAsAction="ifRoom" />
</menu>